--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/angular-notifier/styles.css"
             ],
             "scripts": []
           },
@@ -87,7 +88,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/angular-notifier/styles.css"
             ],
             "scripts": []
           }
